vlib/v/checker/tests/const_field_sub_err.out
vlib/v/checker/tests/const_field_sub_err.v:6:2: error: `a` is a const, declare it with `mut var` to make it mutable 
    4 | 
    5 | fn main() {
    6 |     a -= 1
      |     ^
    7 | }
