vlib/v/checker/tests/const_field_sub_err.vv
const (
	a = 1
)

fn main() {
	a -= 1
}
